K8s/backend-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: prodfront
spec:
  type: ExternalName
  externalName: backend-service.prodback.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
